Fix overflow on legacy container

--- a/public/styles/views/partials/article.less
+++ b/public/styles/views/partials/article.less
@@ -68,6 +68,10 @@
 
     #contentarea {
       flex: 1 0 461px;
+
+      .markup_main_standard {
+        overflow: hidden;
+      }
     }
     #sidebar {
       flex: 0 0 223px;
